# vfsc

./: README.md  client.py  init.py  initW11.py  server.py  vfsc.py
vfsc/: LICENSE  README.md  setup.cfg  setup.py
