metadata]
name = vfsc
version = 0.0.1
author = JuMpeR6790
author_email = JuMpeR6790@gmail.com
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/sampleproject
project_urls = VFSC (very fancy socket communicator) is a very simple (but fancy) python api to create simple chat clients (text only).
    Bug Tracker = https://github.com/JuMpeR6790/vfsc/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
